--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,7 +6,7 @@ spring:
     password: ${db_password:}
   sql:
     init:
-      mode: never
+      mode: always
   jpa:
     database-platform: org.hibernate.dialect.MySQLDialect
     hibernate:
