--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,9 +4,6 @@ spring:
     url: "jdbc:mysql://localhost:3307/sunpowa?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true&serverTimezone=UTC"
     username: ${db_username:}
     password: ${db_password:}
-  sql:
-    init:
-      mode: always
   jpa:
     database-platform: org.hibernate.dialect.MySQLDialect
     hibernate:
@@ -16,6 +13,9 @@ spring:
         format_sql: true
     defer-datasource-initialization: true
     open-in-view: true
+  sql:
+    init:
+      mode: never
   thymeleaf: # Thymeleaf
     cache: false
     mode: HTML
