--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -28,8 +28,12 @@ sunpowa:
     mode: HTML
     encoding: UTF-8
     prefix: file:src/main/resources/templates/
-  logging:
-    level:
-      org.hibernate.SQL: DEBUG
-      org.hibernate.orm.jdbc.bind: TRACE
-      org.springframework.security: TRACE
+logging:
+  level:
+    org:
+      hibernate:
+        type:
+          descriptor: TRACE
+        SQL: DEBUG
+      nodeValue: WARN
+    blog: WARN
